# Lab_Programmazione

./: CMakeLists.txt  README.md  TableMath.h
FoglioCalc/: CMakeLists.txt  CountChangesObserver.cpp  CountChangesObserver.h  Observer.h  Subject.h  TableMath.cpp  TableMath.h  ViewWindow.h  Window.cpp  Window.h  WindowSubject.cpp  WindowSubject.h  main.cpp
FoglioCalcolo/: CMakeLists.txt  Observer.cpp  Observer.h  Subject.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mathHeader.h
FoglioCalcolo/Gtest/: test1.cpp  testMathFunctions.cpp
FoglioCalcoloApp/: CMakeLists.txt  CountObserver.h  Subject.h  TableController.cpp  TableController.h  TableMath.cpp  TableMath.h  TestMath.cpp  ViewWindow.h  Window.cpp  Window.h  main.cpp
FoglioCalcoloV2/: CountObserver.h  TableMath.cpp  TableMath.h  ViewWindow.h  Window.cpp  Window.h  main.cpp
build-FoglioCalcolo-Desktop_Qt_5_15_10_shared_MinGW_w64_MINGW64_MSYS2-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-FoglioCalcolo-Desktop_Qt_5_15_10_shared_MinGW_w64_MINGW64_MSYS2-Debug/.cmake/api/v1/reply/: cache-v2-4e55e5ab061fa5e473dc.json  cmakeFiles-v1-c57c790f111e079d17cd.json  codemodel-v2-6d0f79e6cf2ba6ab0292.json  directory-.-Debug-0de0e9ef9ff961e239c7.json  index-2023-09-13T13-43-03-0737.json  target-FoglioCalcolo-Debug-047a2120948674c7b467.json  (+2 more)
build-FoglioCalcolo-Desktop_Qt_5_15_10_shared_MinGW_w64_MINGW64_MSYS2-Debug/FoglioCalcolo_autogen/: deps
build-FoglioCalcolo-Desktop_Qt_5_15_10_shared_MinGW_w64_MINGW64_MSYS2-Debug/FoglioCalcolo_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-FoglioCalcolo-Desktop_Qt_5_15_10_shared_MinGW_w64_MINGW64_MSYS2-Debug/FoglioCalcolo_autogen/include/: ui_mainwindow.h
